deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caed-perfis-permissoes
spec:
  selector:
    app: caed-perfis-permissoes
    component: web
  ports:
    - port: 80
      targetPort: 8000
